base inicial finalizada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <ngx-mat-menu
   style="height: 100%;width: 100%;"
   [arrMenuOptions]="arrMenuOptions"
-  headerTitle="Um Titulo Qualquer"
+  headerTitle="Bello Motos"
+  headerSubtitle="Encontre a alternativa"
   [srcLogo]="srcLogo"
   [heightLogo]="heightLogo"
   [widthLogo]="widthLogo"
